# end-of-month-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
